| Summary: | ASTERISK-27582: Segmentation fault occurs in Asterisk with an invalid SDP media format description | ||
| Reporter: | Sandro Gauci (sandrogauci) | Labels: | patch pjsip security |
| Date Opened: | 2018-01-15 00:44:28.000-0600 | Date Closed: | 2018-02-21 12:09:31.000-0600 |
| Priority: | Blocker | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_pjsip |
| Versions: | 15.1.5 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) advisory.md ( 1) AST-2018-002.pdf ( 2) ASTERISK-27582.diff ( 3) extensions.conf ( 4) pjsip.conf | |
| Description: | A specially crafted SDP message body with an invalid media format description
causes a segmentation fault in asterisk using chan_pjsip. See attached report for full details | ||
| Comments: | By: Asterisk Team (asteriskteam) 2018-01-15 00:44:30.816-0600 This issue has been automatically restricted and set to a blocker due to being a security type issue. If this is not a security vulnerability issue it will be moved to the appropriate issue type when triaged. By: Asterisk Team (asteriskteam) 2018-01-15 00:44:30.890-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Kevin Harwell (kharwell) 2018-01-15 13:11:05.142-0600 Thanks for the report! I've done some testing and am not seeing similar results when using the latest version of Asterisk with bundled pjproject. Both the Asterisk and pjproject versions in use are old. Please upgrade to the latest versions of Asterisk (13.19.0 and 15.2.0), and pjproject (2.7.1) and re-test. Also please use the "\--with-pjproject-bundled" option when configuring Asterisk. -Upgrading to those versions of Asterisk- Upgrading to Asterisk 15.2.0 will enable that configure option, "\--with-pjproject-bundled", by default. For Asterisk 15.1.5 and below you'll have to specify it. Enabling that option will automatically download and configure pjproject 2.7.1 to be used with Asterisk. See more on using the bundled option [here|https://wiki.asterisk.org/wiki/display/AST/PJSIP-pjproject] By: Sandro Gauci (sandrogauci) 2018-01-15 15:08:15.503-0600 We tested on 15.2.0 with the `--with-pjproject-bundled` option and were still able to reproduce the issue. Please find attached our configuration `pjsip.conf` which defines the extensions and credentials and the `extensions.conf`. To reproduce the issue we made use of the python script in the advisory. Do you need further details? By: Kevin Harwell (kharwell) 2018-01-15 15:26:38.179-0600 I made a slight mistake in my earlier comment. Asterisk 13 does not default to use --with-pjproject-bundled. You have to specify that option in Asterisk 15.1.5 or below when configuring. Thanks for the configuration files. I'll see if I can duplicate with those. By: Kevin Harwell (kharwell) 2018-01-16 11:53:11.967-0600 The conf files did the trick. I was able to replicate this crash. I confirmed too that the user must be authenticated (or authentication is not enabled at all on the endpoint) in order for the crash to occur. By: Sandro Gauci (sandrogauci) 2018-01-17 00:05:50.195-0600 Correct .. the attached config, the user needs to authenticate but of course, this is not required if the context of the extension being called does not require authentication. We also confirmed that the crashes can be reproduced when authentication is not required. By: Kevin Harwell (kharwell) 2018-01-31 14:19:35.686-0600 Attaching draft of the Asterisk advisory that will be published. By: Kevin Harwell (kharwell) 2018-02-05 15:58:35.041-0600 [~sandrogauci], We've received a patch from pjproject for this issue, [^ASTERISK-27582.diff]. If you'd like to test it out then execute the following from the the top level of the Asterisk source tree: {noformat} $ git apply ASTERISK-27582.diff {noformat} It should then place the pjproject patch in the "./third_party/pjproject/patches" directory. From there you'll need to rebuild pjproject then Asterisk: {noformat} $ make -C third-party/pjproject distclean $ make {noformat} By: Sandro Gauci (sandrogauci) 2018-02-06 07:55:44.215-0600 thanks! Will test and let you know. By: Sandro Gauci (sandrogauci) 2018-02-10 00:06:02.421-0600 Tested the patch and it looks like the issue has been fixed. Thanks! By: Friendly Automation (friendly-automation) 2018-02-21 12:09:32.160-0600 Change 8347 merged by Kevin Harwell: AST-2018-002: Crash with an invalid SDP media format description [https://gerrit.asterisk.org/8347|https://gerrit.asterisk.org/8347] By: Friendly Automation (friendly-automation) 2018-02-21 12:09:42.926-0600 Change 8348 merged by Kevin Harwell: AST-2018-002: Crash with an invalid SDP media format description [https://gerrit.asterisk.org/8348|https://gerrit.asterisk.org/8348] By: Friendly Automation (friendly-automation) 2018-02-21 12:09:54.608-0600 Change 8349 merged by Kevin Harwell: AST-2018-002: Crash with an invalid SDP media format description [https://gerrit.asterisk.org/8349|https://gerrit.asterisk.org/8349] By: Friendly Automation (friendly-automation) 2018-02-21 12:10:03.676-0600 Change 8350 merged by Kevin Harwell: AST-2018-002: Crash with an invalid SDP media format description [https://gerrit.asterisk.org/8350|https://gerrit.asterisk.org/8350] By: Friendly Automation (friendly-automation) 2018-02-21 12:10:15.427-0600 Change 8351 merged by Kevin Harwell: AST-2018-002: Crash with an invalid SDP media format description [https://gerrit.asterisk.org/8351|https://gerrit.asterisk.org/8351] By: Friendly Automation (friendly-automation) 2018-02-21 12:10:26.292-0600 Change 8352 merged by Kevin Harwell: AST-2018-002: Crash with an invalid SDP media format description [https://gerrit.asterisk.org/8352|https://gerrit.asterisk.org/8352] By: Friendly Automation (friendly-automation) 2018-02-21 12:10:35.798-0600 Change 8353 merged by Kevin Harwell: AST-2018-002: Crash with an invalid SDP media format description [https://gerrit.asterisk.org/8353|https://gerrit.asterisk.org/8353] By: Friendly Automation (friendly-automation) 2018-02-21 14:12:56.276-0600 Change 8345 merged by Kevin Harwell: AST-2018-002: Crash with an invalid SDP media format description [https://gerrit.asterisk.org/8345|https://gerrit.asterisk.org/8345] | ||